package chap01_Iterator;

public interface Aggregate {
    public abstract Iterator iterator();
}
